--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
-buildplatform/
+platformversion2/build*
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
